Features under the section marked 'Current' are completed but pending release as a gem. If you need any of these, you'll need to use the latest source from the git repository.

Features under a numbered section are complete and available in the Wrest gem.

== 2.2.0
 * Add support for HTTP PATCH [Aditi Raveesh]

== 2.1.9
 * Switch to using concurrent-ruby

== 2.1.6
 * Logging payload by default

== 2.1.4
 * Making cache keys include query params

== 2.1.3
 * Adding cache expiry for caches using request headers

== 2.1.2
 * Setting cache keys as URI strings

== 2.1.1
 * Including Redis as a Caching Backend

== 2.0.0
 * Removing support for libcurl

== 1.5.4
 * Make thread pool configurable

== 1.5.3
 * Implemented a thread pool for async requests using ThreadBackend
 * Updated request/response logging to include current thread id
    
== 1.5.2
 * Updated dependencies - ActiveSupport, MultipartPost, Dalli and JRuby OpenSSL
 
== 1.5.1
 * Supports Ruby 2.x.x, JRuby 1.7.6 (and higher), JRuby 9.0.0.0.pre2

== 1.5.0
 * Introducing content type text/plain - pull request by buchin

== 1.4.7
 * Switch to using multi_json to manage Json backend to play nice with Rails 3.1.

== 1.4.6
 * Bump Builder dependency to allow both Builder 2.x and 3.x to be used

== 1.4.5
 * GH#107 alias :deserialize :deserialise

== 1.4.4
 * GH#105 Reduce Rubgems version requirements to 1.3.x or greater from > 1.5

== 1.4.3
 * GH#104 Allow default headers to be added to the uri that are then used for all requests
 * GH#31 Add explicit API for cookies

== 1.4.2
 * GH#102 Code and gemspec mismatch for json-jruby

== 1.4.1
 * GH#66 HTTPS requests using the Net::HTTP backend failing on Ruby 1.8.x

== 1.4.0
 * GH#96 Naive implementation of asynchronous requests using Eventmachine
 * GH#93 Since Wrest::Response is immutable, the results of Response#deserialise are cached

== 1.3.0
 * GH#95 Asynchronous requests on Wrest::Uri.

== 1.2.1
 * GH#91 Remove dependency on tzinfo

== 1.2.0