@@ -8,5 +8,5 @@
 # See the License for the specific language governing permissions and limitations under the License.
 
 module Wrest
-  VERSION = "3.0.0"
+  VERSION = "4.0.0"
 end
