@@ -1,5 +1,8 @@
 Features under the section marked 'Current' are completed but pending release as a gem. If you need any of these, you'll need to use the latest source from the git repository.
 
+== Current
+ * Upgrade gems and fix build on Ruby 3.1.2
+
 Features under a numbered section are complete and available in the Wrest gem.
 
 == 2.2.0
